# pipefetch

./: Cargo.toml  PLAN.md  README.md  pipefetch.1
.github/workflows/: ci.yml  release.yml
examples/: advanced.yaml  demo.yaml
src/: cli.rs  client.rs  collection.rs  config.rs  main.rs  output.rs  resolver.rs
tests/: cli_tests.rs
