[package]
name = "pipefetch"
version = "0.1.0"
edition = "2021"
description = "HTTP client for shell pipelines"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
colored = "2"
