[package]
name = "pipefetch"
version = "0.1.0"
edition = "2021"
description = "HTTP client for shell pipelines"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
colored = "2"
dirs = "6"
base64 = "0.22"
